<?xml version="1.0"?>
 <package>
   <name>CreativeBot_type_A_ROS_pkg</name>
   <version>0.1.0</version>
   <description>ROS package for a Makeblock mBot Ranger controlled by ROS </description>
 
   <maintainer email="patrik.bichis@kreativadelar.se">Patrik Olsson Bichis</maintainer>
   <license>BSD</license>
   <url type="website">https://github.com/Kreativadelar/CreativeBot_type_A_ROS_pkg</url>
   <author email="patrik.bichis@kreativadelar.se">Patrik Olsson Bichis</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>joy</run_depend>
   <run_depend>rosserial_python</run_depend>
 
</package>
